# jupterlite_jupytergis

./: environment.yml  jupyter_lite_config.json  jupyter_lite_config.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  jupyter_lite_config.json
