[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "my-jupyterlite-site"
version = "0.1.0"
requires-python = ">=3.10"
# Only Lite-compatible/build-time deps here. Avoid the old 'jupyterlite' meta-package.
dependencies = [
  "jupyterlite-core==0.6.4",
  "jupyterlite-pyodide-kernel==0.6.1",
  # Optional kernels (uncomment if you use them):
  # "jupyterlite-javascript-kernel==0.3.0",
  # "jupyterlite-p5-kernel==0.1.0",

  # JupyterGIS UI (prebuilt Lab extension is discovered at build)
  "jupytergis",

  # Widgets for notebooks in Lite
  "ipywidgets>=8,<9",

  # Optional renderers/themes (keep if you like)
  # "jupyterlab-geojson>=3.4,<4",
  # "jupyterlab-fasta>=3.3,<4",
  # "jupyterlab-night",
  # "jupyterlab_miami_nights",
  # Language packs, if you want:
  # "jupyterlab-language-pack-fr-FR",
  # "jupyterlab-language-pack-zh-CN",
]

[tool.hatch.build.targets.wheel]
packages = []
